# PDF

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: release-notes.md
docs/: architecture.md  backend-tools.md  conversion-quality.md  external-engines.md  packaging.md
electron/: conversion.cjs  engine-tests.cjs  engines.cjs  main.cjs  preload.cjs  settings.cjs
scripts/: collect-licenses.ps1  generate-icons.mjs  install-external-tools.ps1  package-electron.ps1  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: filesystem.rs  jobs.rs  mod.rs  preview.rs  settings.rs  tools.rs
src-tauri/src/converters/: image_convert.rs  images_to_pdf.rs  iwork_compat.rs  mod.rs  office_to_pdf.rs  pdf_to_epub.rs  pdf_to_excel.rs  pdf_to_images.rs  pdf_to_pptx.rs  pdf_to_word.rs
src-tauri/src/core/: cancellation.rs  errors.rs  job_manager.rs  mod.rs  paths.rs  progress.rs  temp.rs  tool_registry.rs
src-tauri/src/pdf/: compress.rs  decrypt.rs  delete_pages.rs  encrypt.rs  extract_images.rs  inspect.rs  merge.rs  mod.rs  page_numbers.rs  render.rs  reorder.rs  rotate.rs  split.rs  watermark.rs
src-tauri/src/security/: mod.rs  path_guard.rs  sandbox.rs
src-tauri/src/sidecars/: libreoffice.rs  mod.rs  pdfcpu.rs  pdfium.rs  process.rs  qpdf.rs  tesseract.rs
src-tauri/src/storage/: history_store.rs  mod.rs  settings_store.rs
(+62 files in other folders)
